--- a/src/app/pages/main/what/what.component.html
+++ b/src/app/pages/main/what/what.component.html
@@ -2,16 +2,19 @@
   <div class="col">
     <span>🪓</span>
     <h3>ciesielstwo</h3>
-    <p>kyfrtur jakir mamio rampa piglu katryba.</p>
+    <p>kyfrtur jakir mamio rampa piglu katryba. Jhuertan hu tylda, wrhat koltho fahltyk.</p>
+    <app-button text="idź" link="#"></app-button>
   </div>
   <div class="col">
     <span>🚪</span>
     <h3>stolarstwo</h3>
-    <p>kyfrtur jakir mamio rampa piglu katryba.</p>
+    <p>kyfrtur jakir mamio rampa piglu katryba. Jhuertan hu tylda, wrhat koltho fahltyk.</p>
+    <app-button text="idź" link="#"></app-button>
   </div>
   <div class="col">
     <span>🔨</span>
     <h3>warsztaty</h3>
-    <p>kyfrtur jakir mamio rampa piglu katryba.</p>
+    <p>kyfrtur jakir mamio rampa piglu katryba. Jhuertan hu tylda, wrhat koltho fahltyk.</p>
+    <app-button text="idź" link="#"></app-button>
   </div>
 </div>
