--- a/src/app/pages/main/mission/mission.component.html
+++ b/src/app/pages/main/mission/mission.component.html
@@ -3,5 +3,6 @@
   <div class="col-2"></div>
   <div class="col-1">
     <p>Drwa powstały z miłości do drewna. Drewno z drewna to najprawdziwsze drewno, sęk w tym żeby odnaleźć w sobie wewnętrznego pinokio. Niedaleko pada jabłko od jabłoni, a jabłoń to też drzewo. Drewno robimy z drzewa.</p>
+    <app-button text="czytaj więcej" link="#"></app-button>
   </div>
 </div>
