--- a/src/app/pages/main/mission/mission.component.scss
+++ b/src/app/pages/main/mission/mission.component.scss
@@ -1,9 +1,7 @@
-$color: #945D5E;
-$contrast: #37123C;
-$mild: #dda77b;
-$mild2: #71677c;
-$neutral: #a99f96;
-$white: #fdfadf;
+@import './../../../../sass/styles';
+
+
+
 .mission{
   width: 100%;
   margin-top: 5rem;
