events/articles change

--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -1,9 +1,4 @@
-$color: #945D5E;
-$contrast: #37123C;
-$mild: #dda77b;
-$mild2: #71677c;
-$neutral: #a99f96;
-$white: #fdfadf;
+@import './../../../sass/styles';
 
 .button-holder{
   position: relative;
