backend extension calnedar/blog

--- a/src/app/pages/main/calendar/calendar.component.html
+++ b/src/app/pages/main/calendar/calendar.component.html
@@ -2,7 +2,7 @@
   <h2>kalendarz</h2>
 
   <ul *ngIf="events | async as events; else loadingBlock">
-    <li *ngFor="let event of events">{{ event.title }}, {{ event.start | date }} - {{ event.end | date}}</li>
+    <li *ngFor="let event of events">{{ event.title }}, {{ event.start | date }} - {{ event.end | date}}, organizator: {{ event.organiser }} </li>
   </ul>
 
   <ng-template #loadingBlock>
