realizacje backend connected, edited

--- a/src/app/pages/main/calendar/calendar.component.scss
+++ b/src/app/pages/main/calendar/calendar.component.scss
@@ -1,3 +1,9 @@
 .calendar{
-  text-align: center;
+  & h2{
+    text-align: center;
+  }
+  & ul{
+    text-align: left;
+    font-size: .8rem;
+  }
 }
