--- a/src/app/pages/realizacje/realizacje.component.html
+++ b/src/app/pages/realizacje/realizacje.component.html
@@ -1,7 +1,28 @@
 <h1>realizacje</h1>
+
 <main *ngIf="products | async as products; else loadingBlock">
-  <div *ngFor="let product of products" style="width: 100%;">
-    <p >{{ product.title }}</p>
+  <div *ngFor="let domek of products" class="holder">
+<!-- <main *ngIf="domki; else loadingBlock">
+  <div *ngFor="let domek of domki" class="holder"> -->
+    <caption>{{ domek.title }}</caption>
+    <div class="holder-col holder-slides">
+      <app-slideshow [slidesId]="domek.slug" [slidesSet]="domek.images"></app-slideshow>
+    </div>
+    <div class="holder-col holder-info">
+      <p>info<br>
+        inwestor: {{ domek.investor }}<br>
+        kolor domku: {{ domek.house }}<br>
+        kolor dachu: {{ domek.gont }} <br>
+        kategoria: {{ domek.categories[0] }} <br>
+
+      </p>
+      <div *ngFor="let category of domek.categories" class="category-label">{{ category }}</div><br>
+      <div *ngFor="let tag of domek.tags" class="tag-label">{{ tag }}</div>
+
+
+
+
+    </div>
   </div>
 </main>
 
