--- a/src/app/pages/realizacje/realizacje.component.html
+++ b/src/app/pages/realizacje/realizacje.component.html
@@ -8,7 +8,7 @@
       <app-slideshow [slidesId]="domek.slug" [slidesSet]="domek.images"></app-slideshow>
     </div>
     <div class="holder-col holder-info">
-      <caption>{{ domek.title }}</caption>
+      <h2>{{ domek.title }}</h2>
       <p>
         inwestor: {{ domek.investor }}<br>
         kolor domku: {{ domek.house }}<br>
