--- a/src/app/pages/warsztaty/cover/cover.component.html
+++ b/src/app/pages/warsztaty/cover/cover.component.html
@@ -1,14 +1,16 @@
 <div class="event-cover">
   <div class="holder">
-    <span class="event-date">
-      {{ post.createdAt | date }}, autor: {{ post.author }}
-    </span>
-      <div class="event-cover-image">
-        <div *ngFor="let category of categories" class="category-label">{{ category }}</div>
-      <img [src]="post.image" />
-    </div>
-    <caption class="event-cover-title">
-      {{ post.title }}
-    </caption>
+    <a [routerLink]="['/warsztaty', post.slug]">
+      <span class="event-date">
+        {{ post.createdAt | date }}, autor: {{ post.author }}
+      </span>
+        <div class="event-cover-image">
+          <div *ngFor="let category of categories" class="category-label">{{ category }}</div>
+        <img [src]="post.image" />
+      </div>
+      <caption class="event-cover-title">
+        {{ post.title }}
+      </caption>
+    </a>
   </div>
 </div>
