--- a/src/app/components/slideshow/slideshow.component.scss
+++ b/src/app/components/slideshow/slideshow.component.scss
@@ -4,10 +4,9 @@
 
 /* Slideshow container */
 .slideshow-onclick {
-  width: 500px;
+  width: 480px;
   position: relative;
-  margin: auto;
-
+  margin: 12px auto;
 }
 
 /* Hide the images by default */
@@ -15,7 +14,7 @@
   display: none;
 
   & img{
-    height: 20rem;
+    height: 23rem;
   }
 }
 
@@ -35,15 +34,21 @@
   user-select: none;
 }
 
+.prev{
+  transform: translateX(-34px);
+
+}
+
 /* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
+  transform: translateX(34px);
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: $mild2;
+  background-color: $color;
   opacity: 0.6;
   text-decoration: none;
 }
@@ -72,7 +77,7 @@
 }
 
 /* The dots/bullets/indicators */
-.dot {
+.dot{
   cursor: pointer;
   height: 20px;
   width: 20px;
@@ -81,6 +86,7 @@
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+
 }
 
 .active, .dot:hover {
