--- a/src/app/components/slideshow/slideshow.component.scss
+++ b/src/app/components/slideshow/slideshow.component.scss
@@ -4,9 +4,9 @@
 
 /* Slideshow container */
 .slideshow-onclick {
-  width: 480px;
+  width: 540px;
   position: relative;
-  margin: 12px auto;
+  margin: 2rem auto;
 }
 
 /* Hide the images by default */
@@ -26,31 +26,31 @@
   width: auto;
   margin-top: -22px;
   padding: 10px;
-  color: $contrast;
+  color: $white;
   font-weight: 900;
-  font-size: 24px;
+  font-size: 2rem;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
   user-select: none;
+  mix-blend-mode: exclusion;
 }
 
-.prev{
-  transform: translateX(-34px);
+// .prev{
+//   // transform: translateX(-34px);
+    // border-radius: 0 3px 3px 0;
 
-}
+// }
 
 /* Position the "next button" to the right */
 .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
-  transform: translateX(34px);
+  // border-radius: 3px 0 0 3px;
+  // transform: translateX(34px);
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: $color;
-  opacity: 0.6;
   text-decoration: none;
+  transform: scale(1.3);
 }
 
 /* Caption text */
@@ -68,29 +68,36 @@
 
 /* Number text (1/3 etc) */
 .numbertext{
-  color: $contrast;
-  font-size: 12px;
-  padding: 11px 12px;
+  color: $color;
+  background-color: $white;
+  mix-blend-mode: hard-light;
+  font-size: 1rem;
+  padding: .5rem;
   position: absolute;
   top: 0;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
 /* The dots/bullets/indicators */
+.dots{
+  position: absolute;
+  bottom: 4px;
+  left: 50%;
+}
 .dot{
   cursor: pointer;
-  height: 20px;
-  width: 20px;
-  margin: 0 2px;
-  background-color: $color;
+  height: 1rem;
+  width: 1rem;
+  margin: 0 4px;
+  background-color: $white;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-
-}
+  }
 
 .active, .dot:hover {
-  background-color: $mild;
+  background-color: $contrast;
+  mix-blend-mode: difference;
 }
 
 /* Fading animation */
