shrink menu test

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="desktop">
   <nav>
-      <div class="nav-main">
+      <div id="nav-main">
         <ul>
           <li><a routerLink="/ciesielstwo" routerLinkActive="active"><img src="" alt="logo"></a></li>
           <li><a routerLink="/warsztaty" routerLinkActive="active">warsztaty</a></li>
