--- a/src/app/pages/realizacje/realizacje.component.scss
+++ b/src/app/pages/realizacje/realizacje.component.scss
@@ -28,6 +28,7 @@
       list-style: none;
       font-family: Georgia, 'Times New Roman', Times, serif;
       font-weight: 100;
+      font-size: 1rem;
       & li{
         padding-bottom: 1rem;
       }
