nav mobile, home page mobile added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-<header>
-  <app-nav></app-nav>
-</header>
-<body>
-  <div class="router-wrapper">
-    <router-outlet></router-outlet>
-  </div>
-</body>
-
+<app-nav></app-nav>
+<app-nav-mobile></app-nav-mobile>
