--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,6 @@
 <div class="desktop">
   <nav>
+    <div id="nav-main-container">
       <div id="nav-main">
         <ul>
           <li><a routerLink="/ciesielstwo" routerLinkActive="active"><img src="" alt="logo"></a></li>
@@ -9,5 +10,6 @@
           <li><a routerLink="/kontakt" routerLinkActive="active">kontakt</a></li>
         </ul>
       </div>
+    </div>
   </nav>
 </div>
