--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -3,7 +3,7 @@
 .button-holder{
   position: relative;
   width: 100%;
-  height: 4rem;
+  height: 6rem;
 }
 
 .button{
@@ -19,6 +19,13 @@
   text-align: center;
   vertical-align: bottom;
   transition: .2s ease-in-out;
+  margin: 30px 0 10px;
+  @include respond(phone){
+    bottom: 0;
+    right: 0;
+    font-size: 1.2rem;
+    padding: 5px 8px;
+  }
   &:hover{
     background-color: $mild2;
     color: $contrast;
