--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -1,5 +1,12 @@
 @import './../../../sass/styles';
 
+//responsive menu
+@media only screen and (max-width: 599px) {
+  .desktop{
+      display: none;
+      visibility: hidden;
+  }
+}
 
 .active{
   color: $contrast;
@@ -22,14 +29,23 @@ nav{
       }
   }
 }
-
+#nav-main-container{
+  width: 100%;
+  height: 86px;
+  background-color: $white;
+  z-index:10;
+  position: fixed;
+  top:0;
+  transition: .4s ease;
+  box-shadow: $mild2 1px 3px 70px;
+}
 nav #nav-main{
   display: inline-block;
   width: 90%;
   position: fixed;
   top: 10px;
   left: 5%;
-  transition: .4s;
+  transition: .4s ease;
 
 
   & ul{
@@ -37,6 +53,6 @@ nav #nav-main{
       justify-content: space-between;
   }
   & a{
-      transition: .2s ease-out;
+      transition: .4s ease;
   }
 }
