--- a/src/app/pages/main/mission/mission.component.html
+++ b/src/app/pages/main/mission/mission.component.html
@@ -1,8 +1,8 @@
 <div class="mission section">
   <h2>nasza misja</h2>
-  <div class="col-2"></div>
-  <div class="col-1">
+  <div class="col col-image"></div>
+  <div class="col col-text">
     <p>Drwa powstały z miłości do drewna. Drewno z drewna to najprawdziwsze drewno, sęk w tym żeby odnaleźć w sobie wewnętrznego pinokio. Niedaleko pada jabłko od jabłoni, a jabłoń to też drzewo. Drewno robimy z drzewa.</p>
-    <app-button text="czytaj więcej" link="#"></app-button>
+    <app-button text="skontaktuj się z nami" routerLink="/kontakt"></app-button>
   </div>
 </div>
