--- a/src/app/pages/main/what/what.component.html
+++ b/src/app/pages/main/what/what.component.html
@@ -3,18 +3,18 @@
     <span>🪓</span>
     <h3>ciesielstwo</h3>
     <p>kyfrtur jakir mamio rampa piglu katryba. Jhuertan hu tylda, wrhat koltho fahltyk.</p>
-    <app-button text="idź" link="#"></app-button>
+    <!-- <app-button text="idź" link="#"></app-button> -->
   </div>
   <div class="col">
     <span>🚪</span>
     <h3>stolarstwo</h3>
     <p>kyfrtur jakir mamio rampa piglu katryba. Jhuertan hu tylda, wrhat koltho fahltyk.</p>
-    <app-button text="idź" link="#"></app-button>
+    <!-- <app-button text="idź" link="#"></app-button> -->
   </div>
   <div class="col">
     <span>🔨</span>
     <h3>warsztaty</h3>
     <p>kyfrtur jakir mamio rampa piglu katryba. Jhuertan hu tylda, wrhat koltho fahltyk.</p>
-    <app-button text="idź" link="#"></app-button>
+    <app-button text="idź" routerLink="/warsztaty"></app-button>
   </div>
 </div>
