--- a/src/app/pages/main/what/what.component.scss
+++ b/src/app/pages/main/what/what.component.scss
@@ -1,11 +1,29 @@
+@import '../../../../sass/styles';
+
 .what{
-  width: 100%;
+  width: 90%;
+  height: 553px;
+
+  @include respond(tab-land){
+    width: 100%;
+    height: 403px;
+    overflow-x: scroll;
+    display: flex;
+    flex-direction: row;
+  }
 }
 .col{
   width: 30%;
-  margin-left:3.333333%;
+  margin-left: 3.333333%;
   display: inline-block;
   text-align: center;
+  @include respond(tab-port){
+    width: 51vw;
+  }
+  @include respond(phone){
+    width: 70vw;
+
+  }
   & span{
     font-size: 70px;
   }
@@ -14,4 +32,14 @@
     width: 70%;
     vertical-align: bottom;
   }
+  & h3{
+    @include respond(tab-port){
+      width: 51vw;
+    }
+    @include respond(phone){
+      width: 70vw;
+
+    }
+  }
+
 }
