--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@ body{
     margin: 0px;
     background-color: $white;
     box-sizing: content-box;
+    background-image: url(assets/tlo.jpg);
+    background-position-y: 98%;
+    background-size: 100%;
+    background-blend-mode: saturation;
 
     & ::selection{
         background-color: $mild;
@@ -26,10 +30,20 @@ a{
 }
 
 p{
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   line-height: 1.6rem;
-  letter-spacing: .1rem;
-  word-spacing: .2rem;
+  letter-spacing: .13rem;
+  word-spacing: .23rem;
+  font-weight: 300;
+  @include respond(tab-port){
+    font-size: 1.15rem;
+  }
+  @include respond(phone){
+    font-size: 1rem;
+    line-height: 1.3rem;
+    word-spacing: .1rem;
+    font-weight: 100;
+  }
 }
 h2{
   padding-bottom: 5vh;
@@ -37,10 +51,17 @@ h2{
 
 .router-wrapper{
   margin: 86px 0 70rem 0;
+  @include respond(phone){
+    margin: 0;
+  }
 }
+
 
 .section{
   margin-top: 10vh;
+  @include respond(tab-port){
+    margin-top: 7vh;
+  }
 }
 
 p, h1, h2, ol{
@@ -49,7 +70,6 @@ p, h1, h2, ol{
 }
 ul{
   font-size: 1.3rem;
-  // margin: 0;
 }
 
 
