--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,9 +1,9 @@
-$color: #945D5E;
+$color: #c10010;
 $contrast: #37123C;
 // $contrast: red;
 $mild: #dda77b;
 $mild2: #71677c;
-$neutral: #a99f96;
+$neutral: #c7c5c3;
 $white: #fdfadf;
 
 $gap: 0px;
