--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -3,7 +3,7 @@
 .button-holder{
   position: relative;
   width: 100%;
-  height: 6rem;
+  height: 4rem;
 }
 
 .button{
@@ -19,7 +19,7 @@
   text-align: center;
   vertical-align: bottom;
   transition: .2s ease-in-out;
-  margin: 30px 0 10px;
+  margin: 1.5rem 0 .56rem;
   @include respond(tab-land){
     font-size: 1.16rem;
   }
