--- a/src/app/pages/main/mission/mission.component.html
+++ b/src/app/pages/main/mission/mission.component.html
@@ -3,6 +3,8 @@
   <div class="col col-image"></div>
   <div class="col col-text">
     <p>Drwa powstały z miłości do drewna. Drewno z drewna to najprawdziwsze drewno, sęk w tym żeby odnaleźć w sobie wewnętrznego pinokio. Niedaleko pada jabłko od jabłoni, a jabłoń to też drzewo. Drewno robimy z drzewa.</p>
-    <app-button text="skontaktuj się z nami" routerLink="/kontakt"></app-button>
+    <a routerLink="/kontakt">
+      <app-button text="skontaktuj się z nami" ></app-button>
+    </a>
   </div>
 </div>
