--- a/src/app/pages/wiedza/wiedza.component.html
+++ b/src/app/pages/wiedza/wiedza.component.html
@@ -1,1 +1,5 @@
-<p>wiedza works!</p>
+<h1>wiedza</h1>
+<p>Lorem ipsum dolor sit amet. Aliquam sem et tortor consequat id porta nibh venenatis. Justo donec enim diam vulputate ut pharetra sit amet. Eu volutpat odio facilisis mauris.
+
+  Consequat semper viverra nam libero justo. Habitant morbi tristique senectus et netus et malesuada fames ac. Et ultrices neque ornare aenean euismod elementum nisi quis. Molestie a iaculis at erat. Porttitor massa id neque aliquam vestibulum morbi blandit cursus. Eu sem integer vitae justo eget magna fermentum iaculis. Elementum sagittis vitae et leo duis ut diam. Id volutpat lacus laoreet non curabitur. Mus mauris vitae ultricies leo integer. Aliquet nibh praesent tristique magna sit amet purus. Amet facilisis magna etiam tempor.</p>
+<app-post-list feed="Knowledge"></app-post-list>
