--- a/src/app/pages/main/what/what.component.html
+++ b/src/app/pages/main/what/what.component.html
@@ -15,6 +15,8 @@
     <span>🔨</span>
     <h3>warsztaty</h3>
     <p>kyfrtur jakir mamio rampa piglu katryba. Jhuertan hu tylda, wrhat koltho fahltyk.</p>
-    <app-button text="idź" routerLink="/warsztaty"></app-button>
+    <a routerLink="/warsztaty">
+      <app-button text="idź"></app-button>
+    </a>
   </div>
 </div>
