--- a/src/app/pages/warsztaty/warsztaty.component.html
+++ b/src/app/pages/warsztaty/warsztaty.component.html
@@ -1,25 +1,3 @@
-<div class="blog">
-  <main
-    *ngIf="posts | async as posts; else loadingBlock"
-  >
-    <app-cover
-      class="post-item"
-      *ngFor="let post of posts"
-      [post]="post"
-    >
-    </app-cover>
-    <!-- <app-cover
-      class="post-item"
-      *ngFor="let article of articles2"
-      [article]="article"
-    >
-    </app-cover> -->
-  </main>
-
-  <ng-template #loadingBlock>
-    <p>
-      Loading...
-    </p>
- </ng-template>
-</div>
+<h1>warsztaty</h1>
+<app-post-list feed="Posts"></app-post-list>
 <app-calendar></app-calendar>
